--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,6 +77,9 @@ $searchbar-md-input-text-color:color($colors, dcwhite);
 $searchbar-md-input-placeholder-color:color($colors, dcgray);
 $searchbar-md-input-search-icon-color:color($colors, dcgray);
 
+//input
+
+
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
