--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -60,6 +60,8 @@ $searchbar-ios-input-placeholder-color:color($colors, dcgray);
 $searchbar-ios-input-search-icon-color:color($colors, dcgray);
 
 
+$alert-ios-button-text-color:color($colors, dcblack);
+
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
@@ -76,6 +78,8 @@ $searchbar-md-input-background-color:color($colors, dcdark);
 $searchbar-md-input-text-color:color($colors, dcwhite);
 $searchbar-md-input-placeholder-color:color($colors, dcgray);
 $searchbar-md-input-search-icon-color:color($colors, dcgray);
+
+$alert-md-button-text-color:color($colors, dcblack);
 
 //input
 
