--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,22 +1,16 @@
 page-profile {
-    .status p{
-        display: flex;
-        justify-content: space-between;
-        display: inline-block;
-    }
     p{
         display: inline-block;
     }
-    #stat{
-       float: right;
-       padding-right: 7px;
-    }
     .main{
-        height: 150px;
+        height: 200px;
+        text-align: center;
     }
+   
     .pic{
-        height:70px;
-        border-radius: 15px;
+        height:120px;
+        width: 120px;
+        border-radius: 60px;
         margin-top:10px;
         margin-left: 10px;
     }
@@ -25,4 +19,19 @@ page-profile {
         margin-left: 10px;
         font-size: 120%;   
     }
+    .edit{
+        position: relative;
+        margin-left: 5px;
+        margin-top: -20px;
+        margin-bottom: 20px;
+        width: 100%;
+        height: 20px;
+     }
+     .edit button{
+        font-size:1.1rem!important;
+
+     }
+     #delete{
+         color: red;
+     }
 }
